--- a/environment.yaml
+++ b/environment.yaml
@@ -5,7 +5,9 @@ dependencies:
   - python=3.10
   - pip
   - pip:
-    - -e airo-blender/airo-mono/airo-dataset-tools/
-    - -e airo-blender/
+    - -e airo-blender/airo-mono/airo-typing
+    - -e airo-blender/airo-mono/airo-dataset-tools/ # COCO dataset tools
+    - -e airo-blender/ # blender integration
     - -e synthetic-cloth-data/
+    - -e synthetic-cloth-data/synthetic_cloth_data/linen/linen # trajectories for deforming the meshes
     - triangle
