--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/dev.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/dev.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
-  - camera: default.yaml
-  - cloth_mesh: default.yaml
+  - camera: zed2i
+  - cloth_mesh: default
 
 
 cloth_type: TOWEL
