--- a/environment.yaml
+++ b/environment.yaml
@@ -9,6 +9,7 @@ dependencies:
     - -e airo-blender/airo-mono/airo-typing
     - -e airo-blender/airo-mono/airo-dataset-tools/ # COCO dataset tools
     - -e airo-blender/airo-mono/airo-spatial-algebra/ # spatial algebra
+    - -e airo-blender/airo-mono/airo-dataset-tools/
     - -e airo-blender/ # blender integration
     - -e synthetic-cloth-data/
     - -e synthetic-cloth-data/synthetic_cloth_data/linen/linen # trajectories for deforming the meshes
