make surface and distractors configurable

--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/dev.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/dev.yaml
@@ -1,9 +1,14 @@
 defaults:
-  - _self_
-  - camera: zed2i
+  - camera: zed2i_512_256
   - cloth_mesh: default
+  - surface: default
+  - distractors: default
+  - _self_
 
 
 cloth_type: TOWEL
 id: 5
-relative_dataset_path: synthetic_images/dev
+relative_dataset_path: synthetic_images/TOWEL/dev
+
+cloth_mesh:
+  mesh_path: deformed_meshes/TOWEL/03-smaller
