make camera and surface configurable

--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/towels.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/towels.yaml
@@ -1,7 +1,7 @@
 defaults:
   - camera: zed2i_512_256
   - cloth_mesh: default
-  - surface: default
+  - surface: polyhaven
   - distractors: default
   - _self_
 
