--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/experiment/purple-towel-on-white-background.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/experiment/purple-towel-on-white-background.yaml
@@ -1,17 +1,28 @@
 # @package _global_
-relative_dataset_path: synthetic_images/TOWEL/07-fixed-towel-and-background
+
+defaults:
+  - override /cloth_material: hsv
+
+relative_dataset_path: synthetic_images/TOWEL/07-purple-towel-on-white
 
 cloth_mesh:
   mesh_path: deformed_meshes/TOWEL/03-smaller
 
 camera:
-  minimal_camera_height: 0.8 # keep camera rather vertical
+  minimal_camera_height: 1.0 # keep camera rather vertical
   max_sphere_radius: 1.2
 
 surface:
-  h_range: [0.701,0.701]
-  s_range: [0.04,0.04]
+  size_range: [4,4]
+  h_range: [0.1,0.1]
+  s_range: [0.07,0.07]
   v_range: [0.88,0.88]
 
 
+distractors:
+  max_distractors: 0
 
+cloth_material:
+  h_range: [0.97,0.97]
+  s_range: [0.95,0.95]
+  v_range: [0.8,0.8]
