--- a/synthetic-cloth-data/synthetic_cloth_data/meshes/deformations/pyflex_deformations/configs/experiment/single-layer_tshirt.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/meshes/deformations/pyflex_deformations/configs/experiment/single-layer_tshirt.yaml
@@ -1,11 +1,11 @@
 # @package _global_
 deformation_config:
-  max_drag: 0.0 # not necessary with all the self collisions
+  #max_drag: 0.0 # not necessary with all the self collisions
   max_orientation_angle: 0.5 # np.pi /6, keep deformations small
   fold_probability: 0.7
 
-mesh_dir: flat_meshes/TSHIRT/Cloth3D-10
-output_dir: deformed_meshes/TSHIRT/pyflex/cloth3d
+mesh_dir: flat_meshes/TSHIRT/dev
+output_dir: deformed_meshes/TSHIRT/pyflex/single-layer
 
 num_samples: 100
 start_id: 0
