--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/tshirts.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/tshirts.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - camera: zed2i_256_256
+  - camera: zed2i_512_256
   - cloth_mesh: default
   - _self_
 
@@ -9,4 +9,4 @@ id: 5
 relative_dataset_path: synthetic_images/TSHIRT/00
 
 cloth_mesh:
-  mesh_path: flat_meshes/TSHIRT/00
+  mesh_path: deformed_meshes/TSHIRT/pyflex/cloth3d
