--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/towels.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/towels.yaml
@@ -1,10 +1,11 @@
 defaults:
   - camera: zed2i_512_256
+  - renderer: cycles
   - cloth_mesh: default
-  - surface: polyhaven
+  - cloth_material: hsv
+  - surface: hsv
   - distractors: default
   - _self_
-
 
 cloth_type: TOWEL
 id: 5
