--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/tshirts.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/tshirts.yaml
@@ -1,6 +1,10 @@
 defaults:
   - camera: zed2i_512_256
+  - renderer: cycles
   - cloth_mesh: default
+  - cloth_material: hsv
+  - surface: hsv
+  - distractors: default
   - _self_
 
 
