--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/towels.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/towels.yaml
@@ -2,8 +2,8 @@ defaults:
   - camera: zed2i_512_256
   - renderer: cycles
   - cloth_mesh: default
-  - cloth_material: hsv
-  - surface: hsv
+  - cloth_material: towel
+  - surface: polyhaven
   - distractors: default
   - _self_
 
