--- a/synthetic-cloth-data/synthetic_cloth_data/meshes/deformations/pyflex_deformations/configs/experiment/cloth3d_flat_tshirt.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/meshes/deformations/pyflex_deformations/configs/experiment/cloth3d_flat_tshirt.yaml
@@ -2,11 +2,13 @@
 deformation_config:
   max_drag: 0.0 # not necessary with all the self collisions
   max_orientation_angle: 1.0 # np.pi /3, keep deformations small
-  fold_probability: 0.9
+  fold_probability: 0.8
+  max_fold_distance: 0.3
+
 
 
 mesh_dir: flat_meshes/TSHIRT/Cloth3D-1-flat
-output_dir: deformed_meshes/TSHIRT/01-cloth3d-flat
+output_dir: deformed_meshes/TSHIRT/02-cloth3d-flat
 
 num_samples: 100
 start_id: 0
