create proper tshirts material

--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/tshirts.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/tshirts.yaml
@@ -2,7 +2,7 @@ defaults:
   - camera: zed2i_512_256
   - renderer: cycles
   - cloth_mesh: default
-  - cloth_material: hsv
+  - cloth_material: tshirt
   - surface: polyhaven
   - distractors: default
   - _self_
