--- a/synthetic-cloth-data/synthetic_cloth_data/meshes/deformations/pyflex_deformations/configs/experiment/shorts.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/meshes/deformations/pyflex_deformations/configs/experiment/shorts.yaml
@@ -1,12 +1,14 @@
 # @package _global_
+mesh_dir: flat_meshes/SHORTS/Cloth3D-5-flat-randomized-scale
+output_dir: deformed_meshes/SHORTS/00-cloth3d
+
 deformation:
+  fold_probability: 0.7
   max_drag: 0.0 # not necessary with all the self collisions
   max_orientation_angle: 0.5 # np.pi /6, keep deformations small
-  fold_probability: 0.7
 
-mesh_dir: flat_meshes/TSHIRT/Cloth3D-5-flat-randomized-scale
-output_dir: deformed_meshes/TSHIRT/02-cloth3d-flat
 
-num_samples: 100
+
+num_samples: 5000
 start_id: 0
-debug: True
+debug: False
