add visibility ring to configurations

--- a/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/lego-battery.yaml
+++ b/synthetic-cloth-data/synthetic_cloth_data/synthetic_images/configs/lego-battery.yaml
@@ -4,6 +4,7 @@ defaults:
   - cloth_mesh: default
   - surface: polyhaven
   - distractors: default
+  - annotator: default
   - _self_
 
 cloth_type: LEGO
