push code to generate tables

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ ignore_missing_imports=True
 
 [flake8]
 max-line-length = 120
-extend-ignore = E203, E501, E266, E402
+extend-ignore = E203, E501, E266, E402, W605
 #E501 line-length by Black
 #E266 double ## in comments
 max-complexity = 10
